Bug fix 126387 - iphone 6-8/X bars alignment

--- a/assets/bars.scss
+++ b/assets/bars.scss
@@ -14,7 +14,7 @@
 
     //Apple iPhone 8 portrait
     @media only screen
-    and (max-device-width : 375px)
+    and (max-device-width : 360px)
     and (orientation : portrait)
     {
         margin-left: 55px;
